<resources>
    <string name="app_name">SakshitApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="loginOr">----  Or ----</string>
    <string name="create_new_user">Create New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="role_title">I will be</string>
    <string name="role_student_type">Studing</string>
    <string name="role_teacher_type">Teaching</string>
    <string name="already_signed_up">already signed up</string>
    <string name="save">Save</string>
    <string name="fab_create_course_desc">Create Course</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="extended_change_image_content_desc">Change Profile Image</string>
    <string name="change_image">Change</string>
    <string name="title">Title</string>
    <string name="course_summery_hint">Write course summery here</string>
    <string name="summery">Summery</string>
    <string name="description">Description</string>
    <string name="course_category">Category</string>
    <string name="course_language">language</string>
    <string name="course_price">Price</string>
    <string name="youtube_url">Youtube Url</string>
    <string name="upload_file">Select video or pdf only</string>
    <string name="upload">Upload</string>
    <string name="question_to_pass_test">Questions to pass Leason</string>
    <string name="questions">Questions</string>
    <string name="draft">Drafts</string>
    <string name="course_status">Status: %s Likes: %d Subscribers: %d Reviews: %d</string>
    <string name="lesson_status">Questions: %d Likes: %d Reviews: %d</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="new_lesson">+ Add New Lesson</string>
    <string name="title_activate">Activate</string>
    <string name="title_deactivate">Deactivate</string>
    <string name="lessons">Lessons</string>
    <string name="question_status">Question: %s</string>
    <string name="answer_status">Answer: %s</string>
    <string name="answer_option_status">Options: %d</string>
    <string name="new_question">+ Add New Question</string>
    <string name="question">Question</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="correct_answer_header">Correct Answer:</string>
    <string name="empty_state">empty</string>
    <string name="title_activity_main_student">MainActivity</string>
    <string name="my_course">My Courses</string>
    <string name="all">All</string>
    <string name="my_course_sub">%s (%d)</string>
    <string name="course_sub">%s (%d) ₹ %3$,.2f</string>
    <string name="you_may_like">You may also like</string>
    <string name="review">Reviews</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_your_review">Add your review</string>
    <string name="add_review">Add Review</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="course_subtitle">%s at ₹ %2$,.2f</string>
    <string name="title_cart">Cart</string>
    <string name="title_course">Course</string>
    <string name="edit">Edit</string>
    <string name="title_lesson">Lesson</string>
    <string name="title_edit_question">Edit Question</string>
    <string name="title_edit_lesson">Edit Lesson</string>
    <string name="title_edit_course">Edit Course</string>
    <string name="done">Done</string>
    <string name="quiz">Quiz</string>
    <string name="skip">Skip</string>
    <string name="question_format">Question %d. %s</string>
    <string name="retry">Retry</string>
    <string name="loading">loading...</string>
    <string name="course_complete_status">Congratulation!\nYou have completed the course</string>
    <string name="lesson_complete_status">Congratulations!\nYou have completed the lesson</string>
    <string name="lesson_failed_status">You have failed the quiz</string>
    <string name="result">Result</string>
    <string name="close">Close</string>
    <string name="your_course">Yours Courses</string>
    <string name="yous_subscriptions">Your Subscription</string>
    <string name="no_result">No Result</string>
    <string name="title_search">Search</string>
    <string name="default_notification_channel_id">sakshit_app_notification</string>
    <string name="default_notification_channel_description">"Default firebase channel "</string>
    <string name="default_notification_channel_name">Sakshit App</string>
    <string name="logout">Logout</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="balance">Balance: ₹ %1$,.2f</string>
    <string name="redeem">Redeem</string>
    <string name="name_header">Name</string>
    <string name="email_header">Email</string>
    <string name="change_name">Change Name?</string>
    <string name="accept">Accept</string>
    <string name="title_my_account">Profile</string>
</resources>