<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sakshitapp.android.view.fragment.home.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_courseFragment"
            app:destination="@id/courseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sakshitapp.android.view.fragment.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sakshitapp.android.view.fragment.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/courseFragment"
        android:name="com.sakshitapp.android.view.fragment.course.CourseFragment"
        android:label="@string/title_course" >
        <argument
            android:name="courseId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.sakshitapp.android.view.fragment.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart"/>
</navigation>